aoc/util/objects/Advent_of_Code_Problem__c/Advent_of_Code_Problem__c.object-meta.xml
<CustomObject>
    <label>Advent of Code Problem</label>
    <nameField>
        <label>Problem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advent of Code Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>