aoc/util/objects/Advent_of_Code_Problem__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the solutions has finished caculating.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>