aoc/util/objects/Advent_of_Code_Problem__c/fields/Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Time__c</fullName>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>