aoc/util/objects/Advent_of_Code_Problem__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>Input of this Advent of Code Problem</description>
    <label>Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>