aoc/util/objects/Advent_of_Code_Problem__c/fields/Part_1_Solution__c.field-meta.xml
<CustomField>
    <fullName>Part_1_Solution__c</fullName>
    <description>Solution of Part 1</description>
    <label>Part 1 Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>