aoc/util/objects/Advent_of_Code_Problem__c/fields/Part_2_Solution__c.field-meta.xml
<CustomField>
    <fullName>Part_2_Solution__c</fullName>
    <description>Solution of Part 2</description>
    <label>Part 2 Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>