aoc/util/objects/Advent_of_Code_Problem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Field to store the status of a running calculation</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>