aoc/util/objects/Advent_of_Code_Problem__c/validationRules/Input_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Input_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Input__c)</errorConditionFormula>
    <errorMessage>Input cannot be blank</errorMessage>
</ValidationRule>