aoc/util/objects/Advent_of_Code_Problem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Part_1_Solution__c</columns>
    <columns>Part_2_Solution__c</columns>
    <columns>Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>